[tool.poetry]
name = "mask-da"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.7.0"
albumentations = "^1.3.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.6.3"
yapf = "^0.33.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
